--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Elm Narrative Engine Platform - My Projects</title>
+        <title>Elm Narrative Engine Editor</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
@@ -9,7 +9,7 @@
     <body>
         <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-            <a href="index.html" class="navbar-brand">Elm Narrative Engine Platform</a>
+            <a href="index.html" class="navbar-brand">Elm Narrative Engine Editor</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,8 +31,8 @@
           <h2 class="d-none mb-4 signed-in">My Projects</h2>
           <span class="d-none signed-out">
               <div class="alert alert-info" role="alert">
-                  <h4>Welcome to the Elm Narrative Engine editor</h4>
-                  <p>A tool for writing, previewing, and publishing text-based interactive story games!</p>
+                  <h4>Welcome to the Elm Narrative Engine Editor</h4>
+                  <p>A tool for writing, testing, and sharing text-based interactive story games!</p>
               </div>
               <p>Get started by clicking "New Project" below, or sign in to access your projects from any computer and collaborate on other projects.</p>
           </span>
