--- a/preview.html
+++ b/preview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Elm Narrative Engine Platform</title>
+        <title>Elm Narrative Engine Editor - Preview</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <script type="text/javascript" src="elm-code/preview-elm.js"></script>
@@ -10,7 +10,7 @@
     <body>
         <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-            <a href="index.html" class="navbar-brand">Elm Narrative Engine Platform</a>
+            <a href="index.html" class="navbar-brand">Elm Narrative Engine Editor</a>
             <span id="project-title" class="navbar-text"></span>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
