--- a/sign-in.html
+++ b/sign-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Elm Narrative Engine Platform - Sign In</title>
+        <title>Elm Narrative Engine Editor - Sign In</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
@@ -11,7 +11,7 @@
     <body>
         <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-            <a href="index.html" class="navbar-brand">Elm Narrative Engine Platform</a>
+            <a href="index.html" class="navbar-brand">Elm Narrative Engine Editor</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
