--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
               <a type="button" class="btn btn-primary ml-2" href="sign-in.html">Sign in</a>
           </div>
 
-          <button id="new-project" type="button" class="d-none btn btn-primary signed-out signed-in signed-in-as-guest" data-toggle="modal" data-target="#new-project-modal">New Project</button>
-          <a type="button" class="d-none btn btn-primary signed-out" href="sign-in.html">Sign in</a>
+          <button id="new-project" type="button" class="d-none btn btn-primary signed-in signed-in-as-guest" data-toggle="modal" data-target="#new-project-modal">New project</button>
+
+          <button id="get-started" type="button" class="d-none btn btn-primary signed-out">Get started</button>
+          <a type="button" class="d-none btn btn-primary signed-out" href="sign-in.html">Existing user</a>
 
           <div id="projects" class="d-none list-group mb-2 mt-2 signed-in"><em>Loading...</em></div>
 
@@ -88,7 +90,7 @@
             window.onAuth = window.ENE.Projects.init;
             window.onNoAuth = () => {
                 if(window.signingOut) return
-                $("#new-project").click(() => window.ENE.Projects.startGuestAuthFlow());
+                $("#get-started").click(() => window.ENE.Projects.startGuestAuthFlow());
                 $(".signed-out").removeClass("d-none");
                 $("#loading").addClass("d-none");
             }
