add export project functionality
initially used to export tutorial project

--- a/edit.html
+++ b/edit.html
@@ -69,9 +69,9 @@
                 </div>
 
                 <!-- settings -->
-                <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-                    <h3>Project settings</h3>
-                    <form>
+                <div class="tab-pane fade p-4" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+                    <h4>Project settings</h4>
+                    <form class="mb-5">
                         <div class="form-group row">
                             <label for="projectName" class="col-sm-2 col-form-label">Name</label>
                             <div class="col-sm-10">
@@ -104,6 +104,8 @@
                             </div>
                         </div>
                     </form>
+                    <h4>Export</h4>
+                    <button id="export"class="btn btn-primary">Export project...</button>
                 </div>
             </div>
             <em id="cloud-status" class="small float-right text-warning">Offline</em>
