redirect to /index.html explicitly
redirecting to just / causes errors when hosted on itch.io

--- a/sign-in.html
+++ b/sign-in.html
@@ -129,7 +129,7 @@
                   if(user.isAnonymous) {
                       $("#access-data-msg").removeClass("d-none");
                   } else {
-                      window.location.href = location.href.slice(0, location.href.lastIndexOf('/') + 1);
+                      window.location.href = location.href.slice(0, location.href.lastIndexOf('/') + 1) + "index.html";
                   }
               }
           });
