add export html button
also handles .hidden tag and includes css

--- a/edit.html
+++ b/edit.html
@@ -105,7 +105,9 @@
                         </div>
                     </form>
                     <h4>Export</h4>
-                    <button id="export"class="btn btn-primary">Export project...</button>
+                    <button id="export-html"class="btn btn-primary">Export playable html...</button>
+                    <p>This will download a html file that you can upload to itch.io</p>
+                    <!-- <button id="export-json"class="btn btn-primary" disabled>Export project data...</button> -->
                 </div>
             </div>
             <em id="cloud-status" class="small float-right text-warning">Offline</em>
